Added Swagger API documentation for news
